fixed select zoom issue on iphone (select { font-size: 16px;})

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -119,3 +119,7 @@ button:focus {
   display: block;
   content: '';
 }
+
+select {
+	font-size: 16px;
+}
